--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Arial', sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin-top: 50px;
 }
 
@@ -13,6 +13,7 @@ body {
   border: 1px solid #000;
   border-radius: 10px;
 }
+
 .container {
   display: grid;
   grid-template-columns: repeat(3, 100px);
